--- a/index.html
+++ b/index.html
@@ -121,54 +121,4 @@
         <div class="row">
           <div class="col-12 text-center">
             <h1>Адрес школы</h1>
-			     <iframe src="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A9cc1eec04136461c6c620c447aa0f3b85df041dd0d7578f54cffdd0708f5ab98&amp;width=400&amp;height=300&amp;lang=ru_RU&amp;scroll=true></iframe>
-
-
-            <p>Москва, улица Барболина, дом 1</p>
-            <button type=button" class="btn btn-success">Нажать</button>
-          </div>
-        </div>
-      </div>
-    </section>
-    <hr>
-    <div class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 col-12">
-            <h3 class="text-center"></h3>
-          </div>
-          <div class="col-md-4 col-12">
-            <h3 class="text-center"></h3>
-            <address class="text-center">
-              
-            </address>
-          </div>
-          <div class="col-md-4 col-12">
-            <h3 class="text-center">Новости</h3>
-            <form>
-              <div class="form-group col-12">
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Ввести Email">
-                <button type="submit" class="btn btn-dark mt-2">Подписаться</button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <footer class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <p></p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap-4.4.1.js"></script>
-  </body>
-</html>
+			     <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7b22b24aa0e23abe5be18db86f96f4d3aba8111836d60a2347ef3eaff8af974b&amp;source=constructor" width="500" height="400" frameborder="0"></iframe>
