--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                                           Дисциплины
                                    </a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="https://docs.google.com/document/d/e/2PACX-1vQ33dPnUTmc8fokhhcsH3-ztOPYmOXpaOuUbww7NiX96c_nUY8d9MOvrvCMF09nb55VX5KACcaFdr7S/pub">Биология</a></li>
-          <li><a class="dropdown-item" href="https://docs.google.com/document/d/e/2PACX-1vTXOxBr_G4M0rCnJHTCJttorGcaJRX0usbS69rWzAa2CeKwgEvg5LCahqMZCGTPFHiwdxOnj6jZnZJn/pub">Математика</a></li>
-          <li><a class="dropdown-item" href="https://docs.google.com/document/d/e/2PACX-1vS1f5eAge79vrg4F7H5ougpxjfXZwHyf48zEZ0h4Ju--9YgTcyy79QvkdhD8oQZdFshEuUJHVdEAj4f/pub">Химия</a></li>
+          <li><a class="dropdown-item" href="био.html">Биология</a></li>
+          <li><a class="dropdown-item" href="мат.html">Математика</a></li>
+          <li><a class="dropdown-item" href="химия.html">Химия</a></li>
         </ul>
       </li>
     </ul>
