--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul class="navbar-nav">
       <li class="nav-item active"><a class="nav-link" href="#">О школе</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
-      <li class="nav-item"><a class="nav-link" href="https://docs.google.com/document/d/e/2PACX-1vTiELkzYIZr_uX0mWVPvZZdE86o63m0c_ycesb4Wf-u-0ND0qdE2_4MHPRApzuvLPJ3-MgiTJDvLQJ3/pub">Преподаватели</a></li>
+      <li class="nav-item"><a class="nav-link" href="нс.html">Преподаватели</a></li>
       <li class="nav-item dropdown">
 
         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
